[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/zhenfainfo.gd" id="1"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="2"]
[ext_resource type="Texture2D" uid="uid://vgq513gp6o62" path="res://Art/TwentyEightConstellations/41.png" id="3"]

[node name="zhenfainfo" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 358.0
offset_bottom = 354.0
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="PropText" type="VBoxContainer" parent="."]
offset_left = 21.0
offset_top = 29.0
offset_right = 181.0
offset_bottom = 49.0
theme_override_constants/separation = 6
metadata/_edit_lock_ = true

[node name="text_1" type="Label" parent="PropText"]
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0.407843, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.792157, 0.407843, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 18

[node name="text_2" type="Label" parent="PropText"]
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0.407843, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.792157, 0.407843, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 18

[node name="text_3" type="Label" parent="PropText"]
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0.407843, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.792157, 0.407843, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 18

[node name="text_4" type="Label" parent="PropText"]
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0.407843, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.792157, 0.407843, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 18

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(175, 170)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="ZhenFaLevel" type="Label" parent="BG"]
offset_left = -147.0
offset_top = -12.0
offset_right = 112.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 21.0
offset_top = 188.0
offset_right = 339.0
offset_bottom = 344.0
theme_override_constants/separation = 10
metadata/_edit_lock_ = true

[node name="AddProp" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="SkillInfo" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.384314, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true
